# RealChordCraftgame

./: README.md  netlify.toml  package-lock.json  package.json
.github/workflows/: build-voxmorph.yml
ableton-voice-changer/: .gitignore  CMakeLists.txt  README.md
ableton-voice-changer/dsp/: VoxMorphDSP.h
ableton-voice-changer/plugin/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  Presets.h
ableton-voice-changer/tests/: dsp_tests.cpp
netlify/functions/: generate.js
public/: Privacy.html  index.html
src/: App.tsx  Terms.tsx  index.tsx  styles.css
srcapp/: App.tsx
